<resources>
    <string name="app_name">AntentalCarekotlin</string>
    <string name="dr_richard">

Dr Richard
</string>
    <string name="kampala_hos">

Kampala Hospital
</string>
    <string name="search_">

Search..
    </string>
    <string name="biira_clare">

Biira Clare\nSecond Pregancy\n4months expecpected on 23rd july 2023
</string>
    <string name="last_anc_vi">

    Last ANC Visit Information
</string>
    <string name="personal_de">

Personal Details
</string>
    <string name="months">

4 Months
</string>

    <string name="weeks">

3 weeks
</string>
    <string name="left">

Left
</string>
    <string name="tips">

Tips
</string>

    <string name="my_visits">

My Visits
</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_pregnancy_details">Add Pregnancy Details</string>
    <string name="complications_of_pregnancy">Complications of Pregnancy</string>
    <string name="period_of_gestation">Period of Gestation</string>
    <string name="edd">EDD</string>
    <string name="hiv_status">HIV Status</string>
    <string name="care_level">Care Level</string>
    <string name="first_day_of_lnmp">First Day of LNMP</string>
    <string name="submit">Submit</string>
</resources>