<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    tools:context=".MedicalDetail">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bg_shape"
        android:layout_width="322dp"
        android:layout_height="525dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btndoc"
            android:layout_width="205dp"
            android:layout_height="48dp"
            android:layout_marginTop="28dp"
            android:background="@drawable/rectangle"
            android:text="@string/add_pregnancy_details"
            android:textColor="#4E342E"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/bp"
            android:layout_width="264dp"
            android:layout_height="45dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/custom_input"
            android:hint="@string/edd"
            android:drawableEnd="@drawable/ic_date"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/weight"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/weight"
            app:layout_constraintTop_toBottomOf="@+id/weight"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/pulse"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:autofillHints=""
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/period_of_gestation"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/bp"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/bp"
            app:layout_constraintTop_toBottomOf="@+id/bp"
            />


        <EditText
            android:id="@+id/ns"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:hint="@string/complications_of_pregnancy"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/pulse"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/pulse"
            app:layout_constraintTop_toBottomOf="@+id/pulse"
            />


        <EditText
            android:id="@+id/blood"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/care_level"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/ns"
            app:layout_constraintHorizontal_bias="0.509"
            app:layout_constraintStart_toStartOf="@+id/ns"
            app:layout_constraintTop_toBottomOf="@+id/ns" />


        <EditText
            android:id="@+id/illness"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/custom_input"
            android:drawablePadding="12dp"
            android:ems="10"
            android:hint="@string/hiv_status"
            android:inputType="text"
            android:minHeight="48dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/blood"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/blood"
            app:layout_constraintTop_toBottomOf="@+id/blood"
            android:autofillHints="" />

        <EditText
            android:id="@+id/weight"
            android:layout_width="264dp"
            android:layout_height="48dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/first_day_of_lnmp"
            android:inputType="textPersonName"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            app:layout_constraintEnd_toEndOf="@+id/btndoc"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="@+id/btndoc"
            app:layout_constraintTop_toBottomOf="@+id/btndoc" />

        <Button
            android:id="@+id/submit"
            android:layout_width="150dp"
            android:layout_height="48dp"
            android:background="@drawable/rectangle"
            android:text="@string/submit"
            android:textColor="#4E342E"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/illness"
            app:layout_constraintStart_toStartOf="@+id/illness"
            app:layout_constraintTop_toBottomOf="@+id/illness"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>