<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MotherView">

    <TextView
        android:id="@+id/months"
        android:layout_width="222dp"
        android:layout_height="54dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="16dp"
        android:gravity="top"
        android:text="@string/months"
        android:textAppearance="@style/months"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/weeks"
        android:layout_width="141dp"
        android:layout_height="48dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="4dp"
        android:gravity="top"
        android:text="@string/weeks"
        android:textStyle="bold"
        android:textAppearance="@style/weeks"
        app:layout_constraintEnd_toEndOf="@+id/months"
        app:layout_constraintHorizontal_bias="0.308"
        app:layout_constraintStart_toStartOf="@+id/months"
        app:layout_constraintTop_toTopOf="@+id/left" />

    <TextView
        android:id="@+id/left"
        android:layout_width="61dp"
        android:layout_height="33dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="8dp"
        android:gravity="top"
        android:text="@string/left"
        android:textAppearance="@style/left"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/months" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="96dp"
        android:layout_height="77dp"
        app:layout_constraintBottom_toBottomOf="@+id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar"
        app:srcCompat="@drawable/fetus" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="136dp"
        android:layout_height="138dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tips"
        android:layout_width="101dp"
        android:layout_height="68dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="28dp"
        android:gravity="top"
        android:text="@string/tips"
        android:textAppearance="@style/tips"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weeks" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="321dp"
        android:layout_height="234dp"
        android:layout_gravity="center"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintHorizontal_bias="0.285"
        app:layout_constraintStart_toStartOf="@+id/tips"
        app:layout_constraintTop_toBottomOf="@+id/tips">

        <TextView
            android:id="@+id/biira_clare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="top"
            android:paddingStart="12dp"
            android:text="@string/biira_clare"
            android:textAppearance="@style/biira_clare" />


    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="321dp"
        android:layout_height="234dp"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view">


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>