<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DocMainView">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:src="@drawable/circle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dr_richard"
        android:layout_width="213dp"
        android:layout_height="58dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:gravity="top"
        android:text="@string/dr_richard"
        android:textStyle="bold"
        android:textAppearance="@style/dr_richard"
        app:layout_constraintEnd_toStartOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/kampala_hos"
        android:layout_width="194dp"
        android:layout_height="27dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="-5dp"
        android:gravity="top"
        android:text="@string/kampala_hos"
        android:textAppearance="@style/kampala_hos"
        app:layout_constraintEnd_toEndOf="@+id/dr_richard"
        app:layout_constraintHorizontal_bias="0.631"
        app:layout_constraintStart_toStartOf="@+id/dr_richard"
        app:layout_constraintTop_toBottomOf="@+id/dr_richard" />

    <EditText
        android:id="@+id/search_"
        android:layout_width="321dp"
        android:layout_height="51dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_input"
        android:drawableEnd="@drawable/ic_search"
        android:gravity="top"
        android:paddingStart="12dp"
        android:paddingEnd="12dp"
        android:text="@string/search_"
        android:inputType="text"
        android:textColor="#38c008"
        android:textAppearance="@style/search_"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/kampala_hos"
        app:layout_constraintTop_toBottomOf="@+id/kampala_hos" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="334dp"
        android:layout_height="240dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/search_"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="@+id/search_"
        app:layout_constraintTop_toBottomOf="@+id/search_">

        <TextView
            android:id="@+id/biira_clare"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="top"
            android:paddingStart="12dp"
            android:text="@string/biira_clare"
            android:textAppearance="@style/biira_clare" />


    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="326dp"
        android:layout_height="175dp"
        android:layout_gravity="center"
        android:layout_marginTop="28dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="@+id/card_view"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/card_view"
        app:layout_constraintTop_toBottomOf="@+id/card_view">

        <TextView
            android:id="@+id/biira_clare2"
            android:layout_width="match_parent"
            android:layout_height="174dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="top"
            android:paddingStart="12dp"
            android:text="Masika Winne"
            android:textAppearance="@style/biira_clare" />


    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>